# lib/db/src/schema/index.ts
@@ -1,2 +1,4 @@
 export * from "./contactInquiries";
 export * from "./newsletterSubscribers";
+export * from "./conversations";
+export * from "./messages";
